# loom-actions

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: act-quality-smoke.yml  act-unit-builder.yml  ci-main.yml  ci-pr.yml  release.yml
actions/core/pr-comment-update/: action.yml
actions/core/setup-uv/: action.yml
actions/python/quality-report/: action.yml  requirements.txt
actions/python/quality-report/src/: builder.py
actions/python/quality-report/src/templates/: report.md.j2
actions/release/changelog-conventional-commit/: action.yml
actions/release/changelog-conventional-commit/src/: cli.py
actions/release/changelog-conventional-commit/src/templates/: report.md.j2
actions/release/versioning-branch-semantic/: action.yml
examples/sample_project/tests/: test_add.py
tests/act/events/: pull_request.json
tests/fixtures/quality_report/: bandit.json  command_status.tsv  pyright.json  ruff.json
tests/unit/: test_changelog_cli.py  test_quality_builder.py
